tests/output/self_hosted/comma_error.txt
tests/comma_error.oomph:2: error: should be an expression

    print([,])
           ^

assert() failed in "self_hosted/error.oomph", line N
